# AI-template

./: Cargo.toml  README.md  TODO.md
src/: agent.rs  ai.rs  dac.rs  functions.rs  lib.rs  node.rs
src/ai/: agent.rs  dac.rs  functions.rs  mod.rs  node.rs
src/ai/node/: mod.rs  serialize.rs
src/vk/: matrix.rs  mod.rs
src/vk/network/: mod.rs
src/vk/network/.res/: net.mtl
src/vk/shaders/: mod.rs  network_vs.rs  simulation_fs.rs
src/vk/simulation/: buffers.rs  mod.rs
src/vk/utils/: mod.rs  model.rs
