[package]
name = "ai_template"
version = "0.1.0"
edition = "2021"


[dependencies]
rayon = "*"
fastrand = "*"
once_cell = "*"
smallvec = "*"

serde = { version = "1.0", features = ["derive"] }
serde_json = "*"

winit = "0.28.0"
vulkano = "0.34.0"
vulkano-win = "0.34.0"
vulkano-util = "0.34.0"
vulkano-macros = "0.34.0"
vulkano-shaders = "0.34.0"

tobj = "*"

image = "*"


[profile.dev]
opt-level = 1

# TODO Features (GPU processing (OpenCL/Cuda), Display (Vulkan), Encode (FFmpeg))